package com.fst.projet;

public interface ImageFilter extends ImageOperation{
}

//Juste pour avoir la séparation et la différence, les catégories